# rxtrax

./: .gitignore  README.md  TODO.md  compose.yaml
backend/: .dockerignore  Dockerfile  README.md  api.py  build.sh  db.py  lint.sh  pyproject.toml
backend/features/: crud.feature  version.feature
backend/features/steps/: crud.py  version.py
frontend/: .dockerignore  .env.development  Dockerfile  README.md  build.sh  eslint.config.ts  index.css  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
frontend/src/: main.tsx  setup.ts
frontend/src/components/display/: index.test.tsx  index.tsx
frontend/src/components/login/: index.test.tsx  index.tsx
frontend/src/components/meds/: index.test.tsx  index.tsx
frontend/src/helpers/: handle.ts
frontend/src/interfaces/: FormValues.ts  Med.ts
