[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rxtrax-backend"
version = "1.2.0"
description = "Prescription medication tracker (Backend)"
license = "GPL-3.0-only"
authors = [
    {name = "Chris Post"}
]
keywords = ["prescription", "medication", "tracker"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment :: Mozilla",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Typing :: Typed"
]
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.127.0",
    "peewee>=3.18.3",
    "pydantic>=2.12.5",
]
requires-python = ">= 3.14"

[project.urls]
GitHub = "https://github.com/chump29/rxtrax"

[project.optional-dependencies]
dev = [
    "behave>=1.3.3",
    "pip-review>=1.3.0",
    "pylint>=4.0.4"
]

[tool.uv]
python-downloads = "manual"

[tool.hatch.build.targets.wheel]
packages = ["rxtrax-backend"]
